feat(ui): Add global New Order button with responsive header
- Add global "+ New order" button in MainLayout navigation bar
- Button appears adjacent to nav tabs with responsive wrapping
- Use JustifyContentMode.BETWEEN for clean header layout
- Nav group (tabs + button) wraps to second line on narrow screens
- Implement listener pattern in EditOrderDialog (SaveClickEvent, CancelClickEvent)
- Track new customer creation through OrderDetail.newCustomerCreated field
- Update JpaOrderService with customer find-or-create logic
- Keep local "+ New order" button in StorefrontView toolbar
- Document dialog listener pattern preference in CLAUDE.md

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>